objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Covered Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Control_Model__c</fullName>
        <label>Control Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_SN__c</fullName>
        <label>Control SN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Warranty_Date__c</fullName>
        <label>Control Warranty Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>300</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entitelemt_Indicator__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;CASE( Entitlement_Status__c, &quot;Expired&quot;, &quot;01546000000tfht&quot;, &quot;Active&quot;, &quot;01546000000tfhu&quot;, &quot;30 Day Warning&quot;, &quot;01546000000tfhv&quot;,&quot;&quot;),&quot;Active Contract?&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <label>Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>30 Day Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mori Seiki</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Warranty_Date__c</fullName>
        <label>Parts Warranty Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suggested_Products__c</fullName>
        <label>Suggested Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Product 3</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>Technical Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Under_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under Warranty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Date__c</fullName>
        <label>Warranty Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>